--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,14 @@
 {
-  "plugins": [
-    "prettier-plugin-organize-imports",
-    "prettier-plugin-tailwindcss"
-  ],
-  "pluginSearchDirs": false
+	"plugins": [
+		"prettier-plugin-organize-imports",
+		"prettier-plugin-tailwindcss"
+	],
+	"organizeImportsSkipDestructiveCodeActions": true,
+	"pluginSearchDirs": false,
+	"semi": true,
+	"singleQuote": true,
+	"trailingComma": "all",
+	"jsxSingleQuote": true,
+	"tabWidth": 2,
+	"useTabs": true
 }
