--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/styled-engine": "^5.12.3",
     "@tanstack/react-query": "^4.29.3",
     "@tanstack/react-query-devtools": "^4.29.3",
     "axios": "^1.3.6",
