--- a/.editorconfig
+++ b/.editorconfig
@@ -12,6 +12,5 @@ insert_final_newline = true
 # Set default charset
 charset = utf-8
 
-# 4 space indentation
-indent_style = space
+indent_style = tab
 indent_size = 2
