--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
 		"@emotion/styled": "^11.11.0",
 		"@mui/icons-material": "^5.11.16",
 		"@mui/styled-engine": "^5.12.3",
+		"@reduxjs/toolkit": "^1.9.5",
 		"@tanstack/react-query": "^4.29.3",
 		"@tanstack/react-query-devtools": "^4.29.3",
 		"axios": "^1.3.6",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-query": "^3.39.3",
+		"react-redux": "^8.1.2",
 		"react-router-dom": "^6.10.0"
 	},
 	"devDependencies": {
